Checkstyle turned on for all projects. Checkstyle more severe on javadoc errors, to mirror compiler.